@@ -1,40 +1,39 @@
 \name{Command}
 \alias{Command}
 \alias{Q}
-
-\title{Functions to Construct Command Character Strings}
-
-\description{The \code{Command} function creates a character string representing a function call, making it simpler to construct commands for R Commander dialogs. The \code{Q} function puts a second level of quotation marks around its character-string argument and is meant for constructing command arguments that should be character strings.}
+\title{
+Compose R Commands from Character Strings}
+\description{
+\code{Command} simplifies the process of composing text-string versions of R commands, suitable, e.g., for \code{\link{doItAndPrint}}, from character strings representing a function name, arguments to the function, and (optionally) the name of a variable to be assigned the value returned by the function; all of the arguments to \code{Command} are text strings.}
 
 \usage{
 Command(fun, ..., to)
 Q(string)
 }
 
-%- maybe also 'usage' for other objects documented here.
 \arguments{
-  \item{fun}{a character string giving the name of the function to be called}
-  \item{\dots}{named arguments to the function \code{fun}, each of which should be set to a character string representing that argument.}
-  \item{to}{optional character string giving the name of the object to which the result returned by the function \code{fun} is to be assigned, if this is the intent of the command.}
-  \item{string}{a character string, typically representing, a character-string arguemnt to a function, to be given a second level of quotation marks.}
+  \item{fun}{character string representing the name of a function to be called; e.g., \code{"lm"}.}
+  
+  \item{\dots}{zero or more named or unnamed arguments for the function; e.g. (for \code{lm}), \code{"y ~ x1 + x2", data = "Dataset"}; if a named argument is given the value \code{""}, \code{NULL}, or \code{NA}, then the corresponding argument is suppressed in the generated command.}
+  
+  \item{to}{optionally the text name of variable to be assigned the value returned by the function; e.g. (for the \code{lm} example), \code{to = "model1"}.}
+  
+  \item{string}{a character string (or an object that can be coerced to a character string).}
 }
 
-\value{A character string representing a command.}
+\value{\code{Command} returns the text representation of an R command, e.g., \code{"model1 <- lm(y ~ x1 + x2, data=Dataset"}; \code{Q} places quotation marks around \code{string}, e.g., \code{Q("Annual Income")}, and is meant to be used when an argument to \code{Command} should be quoted (see the last example below).}
 
-\author{John Fox \email{jfox@mcmaster.ca}}
+
+\author{John Fox}
+
+\seealso{
+\code{\link{doItAndPrint}}, \code{\link{justDoIt}, \code{\link{logger}}.}
+}
 
 \examples{
 Command("lm", "prestige ~ income + education", data="Duncan", weights="imp", to="model")
-Command("lm", "prestige ~ income + education", "Duncan", weights="imp", to="model")
-Command("lm", "prestige ~ income + education", data="Duncan", weights="", to="model")
-Command("lm", "prestige ~ income + education", data="Duncan", weights=NA, to="model")
 Command("lm", "prestige ~ income + education", data="Duncan", weights=NULL, to="model")
-
 Command("plot", x="income", y="prestige", xlab=Q("Income"), ylab=Q("Prestige"))
-
-cat(Command("lm", "prestige ~ income + education", data="Duncan", 
-            weights="imp", to="model"))
-cat(Command("plot", x="income", y="prestige", xlab=Q("Income"), ylab=Q("Prestige")))
 }
 
-\keyword{misc}
+\keyword{manip}
